Change the header from fixed to sticky to prevent covering the alert messages.

--- a/static/css/myStyle.css
+++ b/static/css/myStyle.css
@@ -349,3 +349,10 @@ background=color: green
     
 }
 
+.message-panel{
+    z-index: 20;
+}
+
+header {
+    z-index: -10;
+}
